tests/functional/lang/eval-fail-map-1.err.exp
error:
       … while calling the 'map' builtin
         at /pwd/lang/eval-fail-map-1.nix:1:1:
            1| builtins.map 1 "foo"
             | ^
            2|

       … while evaluating the second argument passed to builtins.map

       error: expected a list but found a string: "foo"
